--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
 
       <div class="controls">
         <button id="filterHaveRead">Vis leste</button>
-        <button id="sortTitle">Sorter A–Å</button>
-        <button id="sortAlphabetically">Sorter alfabetisk</button>
+        <button id="sortTitle">Sorter alfabetisk</button>
         <button id="clearAll">Slett alle bøker</button>
       </div>
     </header>
